# Workpedia

./: .gitignore  ABOUT.md  Additional_features.md  CLAUDE.md  FIXES.md  IMPROVEMENT_1_SUMMARY.md  IMPROVEMENT_2_SUMMARY.md  IMPROVEMENT_3_SUMMARY.md  IMPROVEMENT_4_SUMMARY.md  IMPROVEMENT_5_SUMMARY.md  README.md  USER_GUIDE.md  app.py  config.py  db-info.py  demo_parser.py  document_processor.py  manage-db.py  pyproject.toml  requirements.txt  test_exception_handling.py  test_logging.py  test_ollama_validation.py  test_resilience.py  test_validation.py  ystemctl status ollama
.claude/: settings.local.json
api/: __init__.py  endpoints.py
config/: config.py
core/: __init__.py  agent.py  agent_tools.py  analyzer.py  caching.py  chunker.py  confidence.py  doc_merger.py  embedder.py  exceptions.py  hybrid_search.py  large_doc_handler.py  llm.py  logging_config.py  parser.py  pdf_splitter.py  progress_tracker.py  query_engine.py  reranker.py  resilience.py  suggestions.py  summarizer.py  validator.py  validators.py
docs_for_processing/: epf-implementing-rules-toc.docx
processors/: __init__.py  csv_processor.py  docx_processor.py  html_processor.py  image_processor.py  pdf_processor.py  xlsx_processor.py
storage/: __init__.py  backup.py  collections.py  history_store.py  vector_store.py
tests/: test_agent.py  test_backup.py  test_caching.py  test_collections.py  test_confidence.py  test_csv_processor.py  test_embedding_models.py  test_history.py  test_hybrid_search.py  test_integration.py  test_parser.py  test_phase3.py  test_phase4.py  test_reranker.py  (+4 more)
